# yolov9mit

./: .tmp_compare_pt.py  README.md  pyproject.toml  requirements.txt  tree_command.py
yolo/: lazy.py
yolo/config/: general.yaml
yolo/config/dataset/: wholebody25.yaml  wholebody28.yaml  wholebody34.yaml
yolo/config/model/: v9-n.yaml
yolo/config/task/: train.yaml  validation.yaml
yolo/tools/: data_augmentation.py  data_loader.py  solver.py
yolo/utils/: dataset_utils.py  logging_utils.py  model_utils.py
