[project]
name = "yolo"
version = "0.1.0"
description = "Official Implementation of YOLO"
authors = [
    { name = "Hao-Tang, Tsui", email = "henrytsui000@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["yolo", "object detection", "computer vision"]
dependencies = [
    "einops==0.7.0",
    "faster-coco-eval==1.6.5",
    "graphviz==0.21",
    "hydra-core==1.3.2",
    "lightning==2.2.3",
    "loguru==0.7.0",
    "numpy==1.26.4",
    "opencv-python==4.11.0.86",
    "albumentations==2.0.8",
    "pillow==10.4.0",
    "pycocotools==2.0.6",
    "requests==2.28.2",
    "rich>=14.1.0",
    "tensorboard==2.20.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "wandb==0.16.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["yolo*"]

[tool.setuptools]
package-data = {"yolo" = ["**/*.yaml"]}
include-package-data = true

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
]

[project.scripts]
yolo = "yolo.lazy:main"

[tool.uv.sources]
torch = [
    { index = "torch-cu128" },
]
torchvision = [
    { index = "torch-cu128" },
]

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
